Fix hero constrants and positioning, active underline in header, wrapping in features icons, social links sizing, footer icons hover color

--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,11 @@ svg {
   display: block;
   border-radius: 100%;
   background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .links-items-icon:hover,
@@ -141,7 +146,7 @@ svg {
   display: block;
   bottom: 0;
   border-radius: 2px;
-  width: 48px;
+  width: 100%;
   height: 4px;
   background-color: #404bbf;
 }
@@ -187,6 +192,9 @@ svg {
   background-position: center;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  margin: 0 auto;
+  background-size: cover;
 }
 
 .hero-heading {
@@ -255,8 +263,11 @@ svg {
 .features-images-container {
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  padding: 23px 99px;
-  background-color: #fdf4f7;
+  height: 112px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4fd;
   margin-bottom: 8px;
 }
 
@@ -329,10 +340,6 @@ svg {
 
 .team-links-container {
   gap: 24px;
-}
-
-.team-cards-link {
-  padding: 12px;
 }
 
 /* ----------------- PORTFOLIO ----------------- */
@@ -457,5 +464,8 @@ svg {
 }
 
 .footer-links-icon {
-  padding: 8px;
+}
+
+.footer-links-icon:hover {
+  background-color: #31d0aa;
 }
